# fun_fact_cli

./: Cargo.toml  README.md
src/: main.rs
