[package]
name = "fun_fact_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.18"
serde = { version = "1.0.182", features = ["derive"] }
serde_json = "1.0.104"
crossterm = "0.27.0"
tokio = {version = "1.29.1", features = ["full"] }